apps/api/api-error.log

> @easyfinderai/api@0.0.0 dev /data/data/com.termux/files/home/easyfinder/EasyFinder-production/apps/api
> pnpm --filter @easyfinderai/shared build && tsx watch src/index.ts


> @easyfinderai/shared@0.0.0 build /data/data/com.termux/files/home/easyfinder/EasyFinder-production/packages/shared
> tsc -p tsconfig.json

/data/data/com.termux/files/home/easyfinder/EasyFinder-production/apps/api/src/inquiries.ts:3
import { getCollection } from "./db.js";
         ^
SyntaxError: The requested module './db.js' does not provide an export named 'getCollection'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.14.1
